alignment issues with footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1039,6 +1039,7 @@ nav {
 
 /*content*/
 .content {
+	display: inline-block;
 	right: 0;
 	left: 0;
 	width: 100%;
